tests/compile/child_search_not_found.stderr
error: method `never_declared` referenced by #[plexus_macros::child(search = "never_declared")] on `planet` not found in impl
  --> tests/compile/child_search_not_found.rs:36:37
   |
36 |     #[plexus_macros::child(search = "never_declared")]
   |                                     ^^^^^^^^^^^^^^^^

warning: use of deprecated struct `plexus_core::ChildCapabilities`: Use MethodRole::DynamicChild { list_method, search_method } instead. Removed in 0.7.
  --> tests/compile/child_search_not_found.rs:11:1
   |
11 | / #[plexus_macros::activation(
12 | |     namespace = "leaf",
13 | |     version = "1.0.0",
14 | |     crate_path = "plexus_core"
15 | | )]
   | |__^
   |
   = note: `#[warn(deprecated)]` on by default
   = note: this warning originates in the attribute macro `plexus_macros::activation` (in Nightly builds, run with -Z macro-backtrace for more info)
